# adventofcode2024

./: .gitignore  Cargo.toml  README.md
src/: day1.rs  day2.rs  template.rs
