[package]
name = "aoc_rust_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

anyhow = "1.0.0"

regex = "1.7.0"

petgraph = "0.6.0"

num = "0.4.1"
ndarray = "0.15.6"
